<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/weather_detail"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mWeatherConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/weather_conditions"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mWeatherTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/current_temp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mHighLowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/weather_hl"
        android:textSize="20sp" />

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:orientation="horizontal">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Tomorrow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mWeatherConditionsD1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/weather_conditions"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mWeatherTempD1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/current_temp"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="85dp"
            android:layout_marginStart="85dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Next Day"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mWeatherConditionsD2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/weather_conditions"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mWeatherTempD2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/current_temp"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
